Add new Styling for Header and Background

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-slate-300 text-center">
+<footer class="bg-slate-300 text-center border-t-2 border-cyan-500 p-2 absolute bottom-0 w-full">
     <p>&copy; Philipp Ullmann 2022</p>
-    <a routerLink="/about">About</a>
+    <a routerLink="/about"><u>Impressum</u></a>
 </footer>
