--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="p-2 m-2 flex-row">
+<div class="bg-green-300 h-screen">
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
